--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -2,10 +2,15 @@
   height: 100vh;
   display: flex;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  zoom: 67%;
   background-color: #000000;
   overflow: hidden;
+
+  transform: scale(0.67);
+  transform-origin: top left;
+  width: calc(100% / 0.67);
+  height: calc(100% / 0.67);
 }
+
 
 .left {
   position: relative;
