--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -862,4 +862,25 @@ body {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .greeting h1 .typing-cursor {
+  display: inline-block;
+  width: 2px;
+  height: 1em;
+  background-color: #8554d7;
+  margin-left: 4px;
+  animation: blink 0.7s infinite;
+  vertical-align: middle;
+}
+
+@keyframes blink {
+  0%,
+  49% {
+    opacity: 1;
+  }
+  50%,
+  100% {
+    opacity: 0;
+  }
+}
 }
