--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -358,14 +358,13 @@ html {
 }
 
 .section-header {
-  text-align: center;
-  margin-bottom: 80px !important;
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  max-width: 1400px;
-  margin: 0 auto;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 
 .section-title {
   font-size: 100px !important;
