--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -358,11 +358,15 @@ html {
 }
 
 .section-header {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 
